--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,10 +9,15 @@ body {
 
 /* GLOBAL */
 
+img {
+   max-width: 100%;
+}
+
 h1,h2,h3,h4,h5,h6 {
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    font-weight: bold;
+   text-align: center;
 }
 
 h1 {
@@ -38,6 +43,17 @@ h3 {
 
 h4 {
    font-size: 20px;
+   margin: 0;
+}
+
+button, input, .btn, a.btn {
+   -webkit-font-smoothing: antialiased;
+   text-rendering: optimizeLegibility;
+   color: white;
+}
+
+.btn {
+   font-weight: bold;
 }
 
 .navbar-brand {
@@ -55,9 +71,9 @@ h4 {
 /* DISCOUNT CAMPAIGN */
 
 #discountCampaign {
-   margin: 50px 0;
+   margin: 50px 0 0;
    background: url('../img/hero-bg.jpg') 50% 0 repeat fixed;
-   min-height: 500px;
+   min-height: 450px;
    padding: 40px 0;
    color: white;
    -webkit-font-smoothing: antialiased;
@@ -66,7 +82,6 @@ h4 {
 
 #discountCampaign .logo {
    width: 100%;
-   max-width: 100%;
    margin-top: 30px;
    border-radius: 100%;
    -webkit-border-radius: 100%;
@@ -74,17 +89,16 @@ h4 {
 }
 
 #discountCampaign .discount-text {
-   margin-top: 30px;
+   margin-top: 0;
 }
 
 #discountCampaign .lead {
    font-size: 30px;
-   font-weight: bold;
    margin: 20px 0 0;
 }
 
 #price-timeline {
-   margin: 60px 0 30px;
+   margin: 30px 0 30px;
    text-align: center;
 }
 
@@ -93,7 +107,7 @@ h4 {
    margin: 0 2% 0 0;
    width: 30%;
    background: #3e4249;
-   padding: 10px 20px 30px;
+   padding: 10px 20px 40px;
    position: relative;
    vertical-align: top;
 }
@@ -102,10 +116,10 @@ h4 {
    color: red;
    background: white;
    display: block;
-   height: 100px;
-   width: 100px;
+   height: 90px;
+   width: 90px;
    text-align: center;
-   line-height: 100px;
+   line-height: 90px;
    font-weight: bold;
    font-size: 30px;
    border-radius: 100%;
@@ -113,7 +127,7 @@ h4 {
    -moz-border-radius: 100%;
    position: absolute;
    left: 50%;
-   margin-left: -50px;
+   margin-left: -45px;
 }
 
 #discountCampaign h1 {
@@ -129,15 +143,54 @@ h4 {
    height: 100%;
 }
 
+/* SUBSCRIBE */
+
 /* ALL PRODUCTS */
 
 #allProducts {
-   margin-top: 60px;
+   margin-top: 30px;
 }
 
 .product {
    display: block;
    width: 100%;
-   max-width: 100%;
    height: 280px;
+}
+
+/* LAYOUT */
+
+#optin {
+   background: #3e4249;
+   padding: 15px 0;
+   color: white;
+   -webkit-font-smoothing: antialiased;
+   text-rendering: optimizeLegibility;
+   font-size: 1.2em;
+}
+
+#optin p {
+   margin: 7px 0 0;
+}
+ /* ABOUT US */
+
+.section-header {
+   text-align: center;
+}
+
+#aboutUs {
+   background: #3e4249;
+   color: white;
+   -webkit-font-smoothing: antialiased;
+   text-rendering: optimizeLegibility;
+   margin-top: 30px;
+}
+
+#aboutUs .logo {
+   display: block;
+   width: 100%;
+}
+
+#aboutUs p {
+   margin: 20px 0 20px;
+   text-align: left;
 }
