--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,6 @@
 /* General */
 
 body {
-   margin-top: 50px;
    font-family: 'Raleway', sans-serif;
    font-size: 16px;
    background: url('../img/tile.jpg') top left repeat;
@@ -26,7 +25,12 @@ h1 {
    margin: 0 0 30px;
 }
 
-h1,p {
+h2 {
+   padding: 30px 0;
+   margin: 0;
+}
+
+h1, h2, p {
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    text-align: center;
@@ -56,23 +60,28 @@ button, input, .btn, a.btn {
    font-weight: bold;
 }
 
+/* NAVBAR */
+
 .navbar-brand {
    margin: 0;
    padding: 0;
 }
 
 #logoSmall {
-   width: 58%;
-   height: auto;
-   padding-left: 20px;
-   padding-top: 5px;
+   height: 50px;
+   border-radius: 3%;
+}
+
+.navbar ul li {
+   padding: 0 10px;
 }
 
 /* DISCOUNT CAMPAIGN */
 
 #discountCampaign {
    margin: 50px 0 0;
-   background: url('../img/hero-bg.jpg') 50% 0 repeat fixed;
+   background: url('../img/goldenBackground.jpg') 50% 0 fixed;
+   background-size: cover;
    min-height: 450px;
    padding: 40px 0;
    color: white;
@@ -82,7 +91,7 @@ button, input, .btn, a.btn {
 
 #discountCampaign .logo {
    width: 100%;
-   margin-top: 30px;
+   margin-top: 50px;
    border-radius: 100%;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%;
@@ -92,9 +101,9 @@ button, input, .btn, a.btn {
    margin-top: 0;
 }
 
-#discountCampaign .lead {
+#discountCampaign h2 {
    font-size: 30px;
-   margin: 20px 0 0;
+   color: black;
 }
 
 #price-timeline {
@@ -149,6 +158,7 @@ button, input, .btn, a.btn {
 
 #allProducts {
    margin-top: 30px;
+   padding-bottom: 30px;
 }
 
 .product {
@@ -177,17 +187,34 @@ button, input, .btn, a.btn {
    text-align: center;
 }
 
-#aboutUs {
-   background: #3e4249;
+/* === VIDEO === */
+
+#video {
+   background: url('../img/goldenBackground.jpg') 50% 0 fixed; min-height: 600px;
+   height: 600px;
+   width: 100%;
+   max-width: 1920px;
+   background-size: cover;
+}
+
+#video h2 {
    color: white;
+}
+
+/* === ABOUT US === */
+
+#aboutUs {
+   color: black;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
-   margin-top: 30px;
+   margin: 0;
 }
 
 #aboutUs .logo {
    display: block;
    width: 100%;
+   border-radius: 100%;
+   margin-bottom: 10px;
 }
 
 #aboutUs p {
