--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,15 +8,35 @@ body {
 
 /* GLOBAL */
 
+a {
+   color: green;
+}
+
+a:hover {
+   color: #6a9b3d;
+}
+
 img {
    max-width: 100%;
+   opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.product-photo {
+   padding: 0;
+   width: 100%;
+   height: 100%;
+}
+
+.product-photo:hover {
+  opacity: 0.6;
 }
 
 h1,h2,h3,h4,h5,h6 {
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    font-weight: bold;
-   text-align: center;
 }
 
 h1 {
@@ -26,8 +46,8 @@ h1 {
 }
 
 h2 {
-   padding: 30px 0;
-   margin: 0;
+   padding: 30px 0 10px;
+   margin: 0 0 10px;
 }
 
 h1, h2, p {
@@ -37,17 +57,25 @@ h1, h2, p {
 }
 
 p {
-   margin: 0;
+   margin: 0 0 10px;
    font-size: 18px;
 }
 
+p .lead {
+   font-weight: normal;
+}
+
+em {
+   font-size: 0.95em;
+}
+
 h3 {
-   margin: 20px 0;
+   margin: 20px 0 10px;
 }
 
 h4 {
    font-size: 20px;
-   margin: 0;
+   margin: 20px 0 10px;
 }
 
 button, input, .btn, a.btn {
@@ -60,7 +88,74 @@ button, input, .btn, a.btn {
    font-weight: bold;
 }
 
+button.btn:focus {
+   outline: none !important;
+}
+
+.btn-success {
+   background: #79b044;
+   border: none;
+}
+
+.btn-success:hover {
+   background: #6a9b3d;
+   border-color: #6a9b3d;
+}
+
+img {
+   max-width: 100%;
+}
+
+.modal-content {
+   background: url('../img/tile.jpg') top left repeat;
+}
+
+.badge.social {
+   background: #ccc;
+   font-size: 24px;
+   height: 40px;
+   width: 40px;
+   text-align: center;
+   line-height: 42px;
+   margin: 0 5px 20px 0;
+   padding: 0;
+   -webkit-border-radius: 50px;
+   -moz-border-radius: 50px;
+   border-radius: 50px 0px 50px 50px;
+   color: white;
+}
+
+.badge.social.facebook:hover {
+   background: #3b5998;
+}
+
+blockquote {
+   padding: 0;
+   border: none;
+   font-style: italic;
+   text-align: left;
+}
+
+blockquote cite {
+   display: block;
+   color: #777;
+   margin: 15px 0 0 0;
+}
+
+blockquote:before {
+   display: none;
+}
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+}
+
 /* NAVBAR */
+
+.navbar-right {
+   margin: 0;
+}
 
 .navbar-brand {
    margin: 0;
@@ -68,12 +163,9 @@ button, input, .btn, a.btn {
 }
 
 #logoSmall {
-   height: 50px;
+   height: 40px;
    border-radius: 3%;
-}
-
-.navbar ul li {
-   padding: 0 10px;
+   margin: 5px 0;
 }
 
 /* DISCOUNT CAMPAIGN */
@@ -87,12 +179,12 @@ button, input, .btn, a.btn {
    color: white;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
+   text-align: center;
 }
 
 #discountCampaign .logo {
-   width: 100%;
+   width: 600px;
    margin-top: 50px;
-   border-radius: 100%;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%;
 }
@@ -121,14 +213,18 @@ button, input, .btn, a.btn {
    vertical-align: top;
 }
 
+#price-timeline h3 {
+   margin: 0;
+}
+
 #price-timeline .price span {
    color: red;
    background: white;
    display: block;
-   height: 90px;
-   width: 90px;
+   height: 80px;
+   width: 80px;
    text-align: center;
-   line-height: 90px;
+   line-height: 80px;
    font-weight: bold;
    font-size: 30px;
    border-radius: 100%;
@@ -136,13 +232,22 @@ button, input, .btn, a.btn {
    -moz-border-radius: 100%;
    position: absolute;
    left: 50%;
-   margin-left: -45px;
+   margin-left: -40px;
+   margin-top: 10px;
 }
 
 #discountCampaign h1 {
    color: red;
    margin: 0;
    font-size: 60px;
+}
+
+#discount-title {
+  color: white;
+}
+
+#discount-title:hover {
+  color: #6a9b3d;
 }
 
 .discountProduct {
@@ -163,11 +268,51 @@ button, input, .btn, a.btn {
 
 .product {
    display: block;
-   width: 100%;
-   height: 280px;
+}
+
+#product-title {
+  color: black;
+}
+
+#product-title:hover {
+  color: #6a9b3d;
 }
 
 /* LAYOUT */
+
+.row + .row {
+   margin-top: 20px;
+}
+
+#primary {
+   margin-top: 30px;
+   padding-bottom: 40px;
+}
+
+.feature-image {
+   display: table;
+   width: 100%;
+   margin-top: 50px;
+   padding: 48px 0 80px;
+}
+
+.feature-image-default {
+   background: url('../img/stuff-feature.jpg') no-repeat;
+   background-size: cover;
+}
+
+.feature-image-default-alt {
+   background: url('../img/hipster-stuff.jpg') no-repeat;
+   background-size: cover;
+}
+
+.feature-image h1 {
+   display: table-cell;
+   vertical-align: middle;
+   text-align: center;
+   color: white;
+   font-size: 50px;
+}
 
 #optin {
    background: #3e4249;
@@ -204,20 +349,362 @@ button, input, .btn, a.btn {
 /* === ABOUT US === */
 
 #aboutUs {
+   background: white url('../img/Wayne.jpg') 80% -10px no-repeat;
    color: black;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    margin: 0;
 }
 
-#aboutUs .logo {
-   display: block;
-   width: 100%;
-   border-radius: 100%;
-   margin-bottom: 10px;
+#aboutUs h3 {
+   text-align: left;
+   margin: 10px 0 2px 0;
 }
 
 #aboutUs p {
    margin: 20px 0 20px;
    text-align: left;
+}
+
+#review {
+   text-align: center;
+}
+
+.testimonial {
+   margin-bottom: 60px;
+}
+
+.testimonial img {
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   border-radius: 50%;
+}
+
+footer {
+   background: #3e4249;
+   color: white;
+   padding: 0;
+   font-size: 15px;
+}
+
+footer p {
+   margin: 0;
+}
+
+#footerLogo {
+   padding-left: 0;
+}
+
+footer nav {
+   padding-top: 15px;
+}
+
+footer a:link, footer a:visited {
+   color: white;
+   padding-right: 10px;
+}
+
+footer a:hover {
+   color: #dd5638;
+}
+
+.pull-right {
+   padding-top: 15px;
+   font-size: 15px;
+}
+
+/* === PRODUCT INFORMATION === */
+
+#product-information p {
+   margin: 0;
+   padding: 0;
+   text-align: left;
+}
+
+#product-information h2 {
+  padding: 0;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+#product-information h3 {
+  text-align: center;
+}
+
+#product-information h4 {
+  padding: 0;
+  margin: 0 0 20px 0;
+  text-align: center;
+}
+
+#product-information ul {
+  padding: 10px 0;
+}
+
+#product-information ul li {
+  padding: 5px 0;
+  line-height: 25px;
+}
+
+#product-information .widget ul {
+  text-align: center;
+}
+
+/* === BLOG === */
+
+#content p {
+   text-align: left;
+}
+
+.post, .widget, #comments {
+   position: relative;
+   border: solid 1px #ddd;
+   background: white;
+   margin: 0 0 30px;
+   -webkit-border-radius: 4px;
+   -moz-border-radius:4px;
+   border-radius: 4px;
+}
+
+.post header,
+.post .post-excerpt,
+.post .post-body,
+#comments .comment-wrap {
+   padding: 20px;
+}
+
+.post header h1, .post header h3 {
+   margin: 0 0 15px;
+   padding: 0 0 15px;
+   border-bottom: solid 1px #ddd;
+   text-align: left;
+}
+
+.post header h1 {
+   font-size: 24px;
+}
+
+.post-image {
+   height: auto;
+}
+
+.post-details {
+   font-size: 12px;
+   width: 90%;
+}
+
+.post-details i.fa {
+   padding-left: 10px;
+}
+
+.post-details i.fa:first-child {
+   padding: 0;
+}
+
+/* === WIDGET === */
+
+.widget {
+   padding: 20px;
+}
+
+.widget h4 {
+   margin: 0 0 10px;
+   padding: 0 0 10px;
+   border-bottom: solid 1px #ddd;
+}
+
+.widget ul {
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+.widget ul li {
+   margin: 0 0 5px;
+}
+
+.widget ul li:hover {
+   position: relative;
+   left: 1px;
+}
+
+/* === FORM === */
+
+label {
+   display: block;
+   font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"],
+textarea {
+   color: #666;
+   border: 1px solid #ccc;
+   -webkit-border-radius: 3px;
+   -moz-border-radius: 3px;
+   border-radius: 3px;
+   display: block;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+   width: 100%;
+   padding: 6px 12px;
+}
+
+/* === COMMENTS === */
+
+.post-comments-badge {
+   height: 70px;
+   width: 70px;
+   position: absolute;
+   top: 25px;
+   right: 20px;
+   border: none;
+   -webkit-border-radius: 100%;
+   -moz-border-radius: 100%;
+   border-radius: 100%;
+   background: #79b044;
+   text-align: center;
+   display: table;
+}
+
+.post-comments-badge a {
+   display: table-cell;
+   vertical-align: middle;
+   color: white;
+   font-size: 20px;
+   line-height: 20px;
+}
+
+.post-comments-badge i.fa {
+   display: block;
+   font-size: 15px;
+   padding: 0;
+   margin-bottom: 4px;
+}
+
+.post-comments-badge:hover {
+   background-color: #8bc653;
+}
+
+#comments h3 {
+   text-align: center;
+}
+
+#comments h4 {
+   font-size: 1.3em;
+}
+
+#comments ol {
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+
+#comments ol li {
+   background: rgba(0,0,0,0.02);
+   padding: 10px 20px;
+   margin: 10px 0;
+   -webkit-border-radius: 4px;
+   -moz-border.radius: 4px;
+   border-radius: 4px;
+   border: solid 1px rgba(0,0,0,0.03);
+}
+
+#comments ol li ol.children {
+   padding: 0;
+   list-style: none;
+   font-size: 0.96em;
+}
+
+#leave-comment {
+   margin: 40px 0 0;
+   padding: 20px 0 0;
+   border-top: solid 1px #eee;
+}
+
+#leave-comment p {
+   margin: 0 20px 10px;
+}
+
+#leave-comment .comment-form-submit {
+   margin: 20px;
+   text-align: right;
+}
+
+#leave-comment .comment-form-submit input {
+   -webkit-border-radius: 4px;
+   -moz-border.radius: 4px;
+   border-radius: 4px;
+   color: black;
+}
+
+/* === RESOURCES === */
+
+.resource {
+   width: 31.33333333%;
+   float: left;
+   margin: 0 3% 40px 0;
+}
+
+
+/*3, 3n, 3n+0 same same */
+.resource:nth-child(3n) {
+   margin-right: 0;
+}
+
+/* === MEDIA QUERIES === */
+
+@media screen and (max-width: 991px) {
+   #aboutUs .container {
+      background: rgba(255,255,255,0.8);
+      padding: 20px;
+   }
+}
+
+@media screen and (max-width: 768px) {
+   #discountCampaign .logo {
+      width: 50%;
+   }
+
+   #optin p {
+      margin: 0 0 10px;
+   }
+
+   #video {
+      min-height: 400px;
+      height: 400px;
+   }
+
+   #video iframe {
+      height: 240px;
+   }
+
+   #review blockquote {
+      margin-top: 20px;
+   }
+
+   .resource {
+      width: 48%;
+      margin-right: 2%;
+      min-height: 0;
+   }
+}
+
+@media screen and (max-width: 568px) {
+   #discountCampaign .discount-text h2 {
+      color: white;
+   }
+
+   #allProducts p {
+      margin-bottom: 10px;
+   }
+
+   .resource {
+      width: 100%;
+      margin-right: 0;
+   }
 }
